# parallel-forward-kinematics

./: CMakeLists.txt  README.md
src/: deprecated_main.cpp  main.cpp
